--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,101 +4,166 @@ layout: page
 
 {{ content }}
 
-{% assign posts = paginator.posts | default: site.posts %}
+<div class="container mx-auto px-4">
+  <div class="max-w-720 mx-auto text-center mb-12">
+    <p>{{ page.carts_text }}</p>
+  </div>
 
-<!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
-<ul class="posts-list list-unstyled" role="list">
-  {% for post in posts %}
-  <li class="post-preview">
-    <article>
-
-      {%- capture thumbnail -%}
-        {% if post.thumbnail-img %}
-          {{ post.thumbnail-img }}
-        {% elsif post.cover-img %}
-          {% if post.cover-img.first %}
-            {{ post.cover-img[0].first.first }}
-          {% else %}
-            {{ post.cover-img }}
-          {% endif %}
-        {% else %}
+  <div class="row">
+    {% for cart in page.carts %}
+    <div class="col-12 col-lg-6" align="center">
+      <div>
+        {% if cart.img %}
+          <img src="{{ cart.img }}" height="250"/>
         {% endif %}
-      {% endcapture %}
-      {% assign thumbnail=thumbnail | strip %}
-
-      {% if site.feed_show_excerpt == false %}
-      {% if thumbnail != "" %}
-      <div class="post-image post-image-normal">
-        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
-          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
-        </a>
-      </div>
-      {% endif %}
-      {% endif %}
-
-      <a href="{{ post.url | absolute_url }}">
-        <h2 class="post-title">{{ post.title | strip_html }}</h2>
-
-        {% if post.subtitle %}
-          <h3 class="post-subtitle">
-          {{ post.subtitle | strip_html }}
-          </h3>
+        <h3 class="text-xl font-semibold mb-2">{{ cart.title }}</h3>
+        {% if cart.building_plan %}
+          <p><a href="{{ cart.building_plan }}">Download the lesson plan</a></p>
         {% endif %}
-      </a>
-
-      {% if post.author %}
-        <span>By <strong>{{ post.author | strip_html }}</strong></span>
-      {% endif %}
-      <p class="post-meta">
-        {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
-        Posted on {{ post.date | date: date_format }}
-      </p>
-
-      {% if thumbnail != "" %}
-      <div class="post-image post-image-small">
-        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
-          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
-        </a>
-      </div>
-      {% endif %}
-
-      {% unless site.feed_show_excerpt == false %}
-      {% if thumbnail != "" %}
-      <div class="post-image post-image-short">
-        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
-          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
-        </a>
-      </div>
-      {% endif %}
-
-      <div class="post-entry">
-        {% assign excerpt_length = site.excerpt_length | default: 50 %}
-        {{ post.excerpt | strip_html | truncatewords: excerpt_length }}
-        {% assign excerpt_word_count = post.excerpt | number_of_words %}
-        {% if post.content != post.excerpt or excerpt_word_count > excerpt_length %}
-          <a href="{{ post.url | absolute_url }}" class="post-read-more">[Read&nbsp;More]</a>
+        {% if cart.supply_list %}
+          <p><a href="{{ cart.supply_list }}">Download the supply list</a></p>
         {% endif %}
       </div>
-      {% endunless %}
+    </div>
+    {% endfor %}
+</div>
 
-      {% if site.feed_show_tags != false and post.tags.size > 0 %}
-      <div class="blog-tags">
-        <span>Tags:</span>
-        <!-- role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics -->
-        <ul class="d-inline list-inline" role="list">
-          {% for tag in post.tags %}
-          <li class="list-inline-item">
-            <a href="{{ '/tags' | absolute_url }}#{{- tag -}}">{{- tag -}}</a>
-          </li>
-          {% endfor %}
-        </ul>
+<div class="container mx-auto px-4">
+  <div class="max-w-720 mx-auto text-center mb-12">
+    <p>{{ page.lessons_text }}</p>
+  </div>
+
+  <div class="row">
+    {% for lesson in page.lessons %}
+    <div class="col-12 col-lg-4" align="center">
+      <div>
+        {% if lesson.img %}
+          <img src="{{ lesson.img }}" height="125"/>
+        {% endif %}
+        <h3 class="text-xl font-semibold mb-2">{{ lesson.title }}</h3>
+        <p>{{ lesson.content }}</p>
+        {% if lesson.grades %}
+          <p>Grades {{ lesson.grades }}</p>
+        {% endif %}
+        {% if lesson.lesson_plan %}
+          <p><a href="{{ lesson.lesson_plan }}">Download the lesson plan</a></p>
+        {% endif %}
+        {% if lesson.book_template %}
+          <p><a href="{{ lesson.book_template }}">Download the book template</a></p>
+        {% endif %}
+        {% if lesson.folding_directions %}
+          <p><a href="{{ lesson.folding_directions }}">Download the folding directions</a></p>
+        {% endif %}
+        {% if lesson.card_printable %}
+          <p><a href="{{ lesson.card_printable }}">Download the card printable</a></p>
+        {% endif %}
+        {% if lesson.slideshow %}
+          <p><a href="{{ lesson.slideshow }}">Download the slideshow</a></p>
+        {% endif %}
+        {% if lesson.book_list %}
+          <p><a href="{{ lesson.book_list }}">Download the book list</a></p>
+        {% endif %}
       </div>
-      {% endif %}
+    </div>
+    {% endfor %}
 
-    </article>
-  </li>
-  {% endfor %}
-</ul>
+</div>
+
+<!--{% assign posts = paginator.posts | default: site.posts %}-->
+
+<!--&lt;!&ndash; role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics &ndash;&gt;-->
+<!--<ul class="posts-list list-unstyled" role="list">-->
+<!--  {% for post in posts %}-->
+<!--  <li class="post-preview">-->
+<!--    <article>-->
+
+<!--      {%- capture thumbnail -%}-->
+<!--        {% if post.thumbnail-img %}-->
+<!--          {{ post.thumbnail-img }}-->
+<!--        {% elsif post.cover-img %}-->
+<!--          {% if post.cover-img.first %}-->
+<!--            {{ post.cover-img[0].first.first }}-->
+<!--          {% else %}-->
+<!--            {{ post.cover-img }}-->
+<!--          {% endif %}-->
+<!--        {% else %}-->
+<!--        {% endif %}-->
+<!--      {% endcapture %}-->
+<!--      {% assign thumbnail=thumbnail | strip %}-->
+
+<!--      {% if site.feed_show_excerpt == false %}-->
+<!--      {% if thumbnail != "" %}-->
+<!--      <div class="post-image post-image-normal">-->
+<!--        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">-->
+<!--          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">-->
+<!--        </a>-->
+<!--      </div>-->
+<!--      {% endif %}-->
+<!--      {% endif %}-->
+
+<!--      <a href="{{ post.url | absolute_url }}">-->
+<!--        <h2 class="post-title">{{ post.title | strip_html }}</h2>-->
+
+<!--        {% if post.subtitle %}-->
+<!--          <h3 class="post-subtitle">-->
+<!--          {{ post.subtitle | strip_html }}-->
+<!--          </h3>-->
+<!--        {% endif %}-->
+<!--      </a>-->
+
+<!--      {% if post.author %}-->
+<!--        <span>By <strong>{{ post.author | strip_html }}</strong></span>-->
+<!--      {% endif %}-->
+<!--      <p class="post-meta">-->
+<!--        {% assign date_format = site.date_format | default: "%B %-d, %Y" %}-->
+<!--        Posted on {{ post.date | date: date_format }}-->
+<!--      </p>-->
+
+<!--      {% if thumbnail != "" %}-->
+<!--      <div class="post-image post-image-small">-->
+<!--        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">-->
+<!--          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">-->
+<!--        </a>-->
+<!--      </div>-->
+<!--      {% endif %}-->
+
+<!--      {% unless site.feed_show_excerpt == false %}-->
+<!--      {% if thumbnail != "" %}-->
+<!--      <div class="post-image post-image-short">-->
+<!--        <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">-->
+<!--          <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">-->
+<!--        </a>-->
+<!--      </div>-->
+<!--      {% endif %}-->
+
+<!--      <div class="post-entry">-->
+<!--        {% assign excerpt_length = site.excerpt_length | default: 50 %}-->
+<!--        {{ post.excerpt | strip_html | truncatewords: excerpt_length }}-->
+<!--        {% assign excerpt_word_count = post.excerpt | number_of_words %}-->
+<!--        {% if post.content != post.excerpt or excerpt_word_count > excerpt_length %}-->
+<!--          <a href="{{ post.url | absolute_url }}" class="post-read-more">[Read&nbsp;More]</a>-->
+<!--        {% endif %}-->
+<!--      </div>-->
+<!--      {% endunless %}-->
+
+<!--      {% if site.feed_show_tags != false and post.tags.size > 0 %}-->
+<!--      <div class="blog-tags">-->
+<!--        <span>Tags:</span>-->
+<!--        &lt;!&ndash; role="list" needed so that `list-style: none` in Safari doesn't remove the list semantics &ndash;&gt;-->
+<!--        <ul class="d-inline list-inline" role="list">-->
+<!--          {% for tag in post.tags %}-->
+<!--          <li class="list-inline-item">-->
+<!--            <a href="{{ '/tags' | absolute_url }}#{{- tag -}}">{{- tag -}}</a>-->
+<!--          </li>-->
+<!--          {% endfor %}-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--      {% endif %}-->
+
+<!--    </article>-->
+<!--  </li>-->
+<!--  {% endfor %}-->
+<!--</ul>-->
 
 {% if paginator.total_pages > 1 %}
 <ul class="pagination main-pager">
